Fix T67577: Add-on unregister can't access preferences on factory reset